--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@ h2{
     color: gray;
     margin-top: 100px;
 }
+h3{
+    font-size: 25px;
+    color: gray;
+    
+}
 .orange-color{
     color: orange;
 }
@@ -84,4 +89,11 @@ h2{
 }
 #recepie-container img{
     width: 100%;
+}
+footer{
+    width: 100%;
+    height: 200px;
+    background-color:#0F0F0F;
+    color: white;
+    text-align: center;
 }
