--- a/style.css
+++ b/style.css
@@ -23,8 +23,7 @@ footer h3{
 }
 .section-container{
     display: flex;
-    margin-top: 50px;
-    margin-bottom: 100px;
+    margin: 50px 0 100px 0;
 }
 .half-breadth{
     width: 50%;
@@ -97,7 +96,7 @@ footer{
 #creative{
     margin: 50px 40px 100px 40px;
     border-radius: 10px;
-    background-image: url(images/shapes/Frame\ 58.jpg);
+    background-image: url(images/shapes/Frame\58.jpg);
 }
 #creative-heading{
     padding: 10px;
