--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ footer h3{
 footer{
     width: 100%;
     height: 200px;
-    background-color:#0F0F0F;
+    background-color:#0B0D17;
     color: white;
     text-align: center;
 }
