Slightly Edited Part 6

--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@ h2{
     color: #5A5A5A ;
     margin-top: 100px;
 }
+h3{
+    text-align: center;
+    padding-top: 30px;
+    color: orange;
+}
 footer h3{
     font-size: 25px;
     color: #5A5A5A ;
@@ -98,11 +103,6 @@ footer{
     border-radius: 10px;
     background-image: url(images/shapes/Frame\ 58.jpg);
 }
-#creative-heading{
-    padding: 10px;
-    color: orange;
-}
-
 #creative-container{
     display: flex;  
 }
@@ -111,3 +111,4 @@ footer{
     color: tomato;
     padding: 10px;
 }
+
